# okoshko

./: CMakeLists.txt  README.md  example.c  okoshko.c  okoshko.h
assets/: font.h
helpers/: allocator.h  log.c  log.h  macros.h  st.h
modules/: button.h  input.h  text_input.h
platform/: apple.h  linux_x11.h  web.h  windows.h
